<!--
  ~ Copyright (C) 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>
    <string name="app_name">Juice Tracker</string>
    <string name="juice_type">Type of juice</string>
    <string name="delete">Delete</string>
    <string name="juice_name">Juice Name</string>
    <string name="juice_description">Description</string>
    <string name="juice_rating">Rating</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="juice_color">Color</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="yellow">Yellow</string>
    <string name="magenta">Magenta</string>
    <string name="Cancel">Cancel</string>
    <string name="rating">rating\n</string>
    <string name="description">description\n</string>
    <string name="color">color</string>
</resources>
